# github-actions-learning

./: .gitignore  docs-README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml  install-uv-and-pytest.yml
docs/: examples.md  index.md
docs/getting-started/: basic-usage.md  installation.md
docs/github-actions/: introduction.md  workflows.md
docs/javascripts/: mathjax.js
docs/mkdocs-guide/: advanced-features.md  material-theme.md  mermaid-diagrams.md
docs/stylesheets/: extra.css
tests/: test_example.py
